# bazel-gazelle

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  README.rst  WORKSPACE  deps.bzl  extend.md  extensions.md  gazelle-reference.md  go.mod  go.sum  go.work.sum  go_tools.bzl  how-gazelle-works.md  reference.md  repository.md
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.claude/skills/convert-integration-test/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: draft-release.yml  publish.yaml  release.yaml  release_prep.sh
cmd/autogazelle/: README.md
cmd/fetch_repo/: BUILD.bazel  copy_tree.go  copy_tree_test.go  go_mod_download.go  main.go  module.go
cmd/gazelle/: BUILD.bazel  fix-update.go  integration_test.go  main.go  metaresolver.go  update-repos.go
config/: BUILD.bazel  config.go  config_test.go
flag/: flag.go
internal/: extend_docs.bzl  go_repository.bzl  go_repository_cache.bzl  go_repository_config.bzl  go_repository_test.go  go_repository_tools.bzl  go_repository_tools_srcs.bzl  list_repository_tools_srcs.go
internal/bzlmod/: BUILD.bazel  default_gazelle_overrides.bzl  go_deps.bzl  go_mod.bzl
internal/gazellebinarytest/: xlang.go
internal/generationtest/: BUILD.bazel  generation_test.go
internal/module/: BUILD.bazel
internal/version/: version.go
label/: BUILD.bazel  label.go  label_test.go
language/: BUILD.bazel  base.go  lang.go  update.go
language/bazel/visibility/: config.go  lang.go  lang_test.go
language/go/: BUILD.bazel  build_constraints.go  config.go  config_test.go  embed.go  fileinfo.go  fileinfo_go_test.go  fileinfo_test.go  fix.go  generate.go  generate_test.go  kinds.go  lang.go  package.go  package_constraints_test.go  platform_info.go  reference.md  resolve_test.go  update_import_test.go
language/go/platform_info_generator/: main.go
language/go/testdata/protos/: BUILD.want
language/proto/: BUILD.bazel  config.go  config_test.go  constants.go  fileinfo.go  fix.go  fix_test.go  generate.go  generate_test.go  kinds.go  package.go  proto.csv  resolve.go  resolve_test.go
merger/: BUILD.bazel  fix.go  fix_test.go  merger.go  merger_test.go
pathtools/: BUILD.bazel  path.go
repro_workspace_mvs/: MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-repro_workspace_mvs  bazel-testlogs  go.work  go.work.sum
repro_workspace_mvs/mod_a/: a.go  go.mod
repro_workspace_mvs/mod_b/: go.mod  main.go
resolve/: BUILD.bazel  config.go  index.go  resolve_test.go
rule/: BUILD.bazel  directives.go  expr.go  expr_test.go  merge.go  merge_test.go  platform.go  platform_strings.go  rule.go  rule_test.go  sort_labels.go  types.go  value.go  value_test.go
tests/: BUILD.bazel
tests/bcr/fixtures/proto_compat/: BUILD.bazel  go.mod  proto_compat.go  proto_compat.proto
tests/bcr/go_mod/: BUILD.bazel  MODULE.bazel  go.mod  go.sum  tests.bzl
tests/bcr/go_mod/local_replace/: BUILD.bazel  local_replace_test.go
tests/bcr/go_mod/pkg/: BUILD.bazel  pkg_test.go
tests/bcr/go_mod/proto/: BUILD.bazel
tests/bcr/go_work/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod
tests/bzlmod/: BUILD.bazel  go_deps_test.bzl  go_mod_test.bzl
tests/fix_package_proto_name_match/example/: BUILD.out
tests/go_alias_kind_existing_aliased_kind_with_different_name_has_deps_updated/: BUILD.in  BUILD.out
tests/go_alias_kind_existing_aliased_kind_with_matching_name_has_deps_updated/: BUILD.in  BUILD.out
tests/go_alias_kind_is_directory_scoped/: BUILD.in
tests/go_alias_kind_is_directory_scoped/leaf/: BUILD.in
tests/go_alias_kind_is_directory_scoped/other/: BUILD.in  file.go
tests/go_config_lang/bar/: BUILD.out
tests/go_config_lang/baz/: BUILD.out
tests/go_config_lang/pb/: BUILD.out
tests/go_delete_proto_with_deps/foo/: BUILD.out
tests/go_embed_all_prefix/: BUILD.out  foo.go  foo_test.go
tests/go_embed_basic/: BUILD.out  foo.go  foo_test.go
tests/go_embed_cross_package/: BUILD.out  foo.go  foo_test.go
tests/go_embed_cross_package/sub/: BUILD.out
tests/go_embed_hidden_files/: BUILD.in  BUILD.out  foo.go  foo_test.go
tests/go_embed_nested_cross_package/: BUILD.out  foo.go  foo_test.go
tests/go_embed_non_package_leaf/: BUILD.out  foo.go  foo_test.go
tests/go_embed_non_package_leaf/a/: BUILD.out
tests/go_embed_shared_file/: BUILD.out  foo.go  foo_test.go
tests/go_embed_shared_file/sub/: BUILD.out  lib.go
tests/go_embed_subdir/: BUILD.out  foo.go  foo_test.go
tests/go_go_generate_proto/proto/: BUILD.out
tests/go_internal_nested_visibility/: expectedStderr.txt
tests/go_map_kind_edge_cases/existing_generated_rule_with_non_renaming_mapping_applied_applies_map_kind/: BUILD.in
tests/go_map_kind_edge_cases/unrelated_non_generated_non_renaming_map_kindd_rule_keeps_map_kind_if_other_generated_rule_is_newly_generated/: BUILD.in
tests/go_map_kind_embedded_resolve/a/: BUILD.out
tests/go_map_kind_embedded_resolve/b/: BUILD.out
tests/go_migrate_proto_rules_fix/: BUILD.out
tests/go_proto_file_mode/: BUILD.out
tests/go_proto_file_mode_remove_go_default_library/: BUILD.out
tests/go_remove_proto_deletes_rules/: BUILD.out
testtools/: config.go  files.go
v2/: BUILD.bazel
v2/cmd/gazelle/: BUILD.bazel  main.go
v2/cmd/gazelle/update/: BUILD.bazel  diff.go  fix.go  metaresolver.go  print.go  update.go
v2/compat/: BUILD.bazel  compat.go
v2/config/: BUILD.bazel  config.go
v2/flag/: BUILD.bazel
v2/internal/: BUILD.bazel
v2/internal/module/: BUILD.bazel  module.go  module_test.go
v2/label/: BUILD.bazel  label.go  label_test.go
v2/language/: BUILD.bazel  lang.go
v2/merger/: BUILD.bazel  fix.go  fix_test.go  merger.go  merger_test.go
v2/pathtools/: BUILD.bazel
v2/resolve/: BUILD.bazel  config.go  index.go  resolve_test.go
v2/rule/: BUILD.bazel  directives.go  directives_test.go  kinds.go  merge_test.go  rule.go
v2/testtools/: BUILD.bazel  config.go
v2/walk/: BUILD.bazel  cache.go  config.go  config_test.go  dirinfo.go  walk.go  walk_test.go
walk/: BUILD.bazel  cache.go  config.go  config_test.go  dirinfo.go  walk.go  walk_test.go
(+50 files in other folders)
