load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pathtools",
    srcs = ["path.go"],
    importpath = "github.com/bazelbuild/bazel-gazelle/pathtools",
    visibility = ["//visibility:public"],
    deps = ["//v2/pathtools"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "path.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":pathtools",
    visibility = ["//visibility:public"],
)
