# gazelle:prefix github.com/bazel-contrib/bazel-gazelle/v2
# gazelle:go_naming_convention import

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "go.mod",
        "//v2/cmd:all_files",
        "//v2/compat:all_files",
        "//v2/config:all_files",
        "//v2/flag:all_files",
        "//v2/internal:all_files",
        "//v2/label:all_files",
        "//v2/language:all_files",
        "//v2/merger:all_files",
        "//v2/pathtools:all_files",
        "//v2/resolve:all_files",
        "//v2/rule:all_files",
        "//v2/testtools:all_files",
        "//v2/walk:all_files",
    ],
    visibility = ["//visibility:public"],
)
