load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "walk",
    srcs = [
        "cache.go",
        "config.go",
        "dirinfo.go",
        "walk.go",
    ],
    importpath = "github.com/bazelbuild/bazel-gazelle/walk",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//rule",
        "//v2/compat",
        "//v2/config",
        "//v2/walk",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "cache.go",
        "config.go",
        "dirinfo.go",
        "walk.go",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":walk",
    visibility = ["//visibility:public"],
)
