load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compat",
    srcs = ["compat.go"],
    importpath = "github.com/bazel-contrib/bazel-gazelle/v2/compat",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//language",
        "//resolve",
        "//v2/config",
        "//v2/language",
        "//v2/resolve",
        "//v2/rule",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "compat.go",
    ],
    visibility = ["//visibility:public"],
)
