load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "flag",
    srcs = ["flag.go"],
    importpath = "github.com/bazel-contrib/bazel-gazelle/v2/flag",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "flag.go",
    ],
    visibility = ["//visibility:public"],
)
