load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "resolve",
    srcs = [
        "config.go",
        "index.go",
    ],
    importpath = "github.com/bazel-contrib/bazel-gazelle/v2/resolve",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//repo",
        "//v2/config",
        "//v2/label",
        "//v2/rule",
    ],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "config.go",
        "index.go",
        "resolve_test.go",
    ],
    visibility = ["//visibility:public"],
)

go_test(
    name = "resolve_test",
    srcs = ["resolve_test.go"],
    embed = [":resolve"],
    deps = [
        "//config",
        "//v2/label",
        "//v2/rule",
        "@com_github_google_go_cmp//cmp",
    ],
)
