load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
load(":tests.bzl", "starlark_tests")

# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import
# gazelle:go_proto_compilers @my_rules_go//proto:go_proto
gazelle(name = "gazelle")

gazelle_test(
    name = "gazelle_test",
    workspace = "//:BUILD.bazel",
)

starlark_tests(
    name = "starlark_tests",
)
